﻿See https://github.com/MarcusWolschon/osmeditor4android/ for documentation on this version and all changes.

1257: Add sharing of current map position or selected object, and reading and savign of scripts, fix regressions wrt taking photographs and menu updates.

1256: Download tasks not just data when we get a geo: uri, some small performance improvements.

1255: Add preset based filtering;

1254: Improve layout of Task/Note dialog, fix issue in form editor where linked presets without fixed tags were not being handled correctly.

1253: Make original tags available to scripts in presets, updated presets and translations, correctness fixes, bump android version number.

1250: Performance improvements, workaround bing reporting wrong max zooms.

1249: Moved most messages to snackbars, persist last chosen directory in the file selectors, improve visibility of crosshairs, lots of refactoring.

1247: Support for 'deprecated' and 'javascript' properties in presets, basic scripting support, fix another regression in multi-select value splitting, improve element description. 

1245: Fix regression in handling multi-select values, testing improvements.

1244: EasyEdit consistency improvements, bug fixes and more test coverage.

1243: Improved JOSM style remote control, added some documentation on supported Intents.

1239: Update default preset, imagery and translations, fix regression wrt discarding useless tags, fix various smaller issues.

1237: Improved functionality for tag filter, fixed issues with tag filter UI.

1236: Fix regression disabling tag only mode, add some initial filter tests-  

1235: Build again Android N, API 24, fix OAuth with API instances on systems using SNI, improve test coverage, better messaging in case of API errors, fix various issues with the tag filter UI and add some documentation, robustness fixes. 

1231: Add button on the debug screen to force send a crash dump.
