@@ -5,7 +5,7 @@
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
 </head>
 <body>
-<h1>Vespucci 0.9.9 "malenki" Highlights</h1><p>This release is dedicated to the memory of Thomas Bellmann "malenki" an engaged OpenStreetMap contributor and Vespucci user.</p><h2>"End of life" Android 2.2 / API 8 support</h2><p>Release 0.9.9 will likely be the last release that, at least in theory, supports Android 2.2. Google has removed 2.2 support from its the libraries we use to provide backwards compatible support and there doesn't seem to be a way that we can replace them in any reasonable form. Even as is, we cannot utilize the latest version of these libraries that would match the Android version that we are building against.</p><p>As Android 2.2 was released in May, 2010 nearly 7 years ago, we hope that this change does not affect all too many users.</p><h2>Indoor Mode</h2><p>Long pressing the lock icon will cycle through</p>
+<h1>Vespucci 0.9.9 "malenki" Highlights</h1><p>This release is dedicated to the memory of Thomas Bellmann "malenki" an engaged OpenStreetMap contributor and Vespucci user.</p><h2>"End of life" Android 2.2 / API 8 support</h2><p>Release 0.9.9 will likely be the last release that, at least in theory, supports Android 2.2. Google has removed 2.2 support from the libraries we use to provide backwards compatible support and there doesn't seem to be a way that we can replace them in any reasonable fashion. Even as is, we cannot use the latest version of these libraries that would match the Android version we are building against.</p><p>As Android 2.2 was released in May, 2010 nearly 7 years ago, we hope that this change does not affect all too many users.</p><h2>Indoor Mode</h2><p>Long pressing the lock icon will cycle through</p>
 <ul>
   <li>Normal editing mode</li>
   <li>Tag only mode</li>
@@ -17,7 +17,7 @@
   <li>Way remains selected</li>
   <li>Drag handle</li>
   <li>.. and so on ...</li>
-</ul><p>The tradeoff is that now more care has to be exercised when dragging ways.</p><h2>Tag based filter</h2><p>The filter can be enable from the normal main menu, the filter can then be changed by tapping the filter icon. More documentation can be found on device or <a href="https://github.com/MarcusWolschon/osmeditor4android/blob/master/documentation/docs/help/en/Tag%20filter.html">here</a>.</p><h2>Scripting</h2><p>Presets now support a "javascript" property that allows a script to manipulate tags, for example a "last_update" tag can be auto filled with the current date. Outside of the use in presets scripts can be run in an expanded mode via the "JS Console", this is currently of limited usefulness as there is no easy way to store and retrieve scripts, however it is intended to add that (and documentation) for release.</p><h2>Miscellaneous</h2>
+</ul><p>The tradeoff is that now more care has to be exercised when dragging ways.</p><h2>Tag based filter</h2><p>The filter can be enabled from the normal main menu, the filter can then be changed by tapping the filter icon. More documentation can be found on device or <a href="https://github.com/MarcusWolschon/osmeditor4android/blob/master/documentation/docs/help/en/Tag%20filter.html">here</a>.</p><h2>Preset based filter</h2><p>An alternative to the above, objects are filtered either on individual presets or on preset groups. Tapping on the filter icon will display a preset selection dialog, similar to that used elsewhere in Vespucci. Individual presets can be selected by a normal click, preset groups by a long click (normal click enters the group).</p><h2>Scripting</h2><p>Presets now support a "javascript" property that allows a script to manipulate tags, for example a "last_update" tag can be auto filled with the current date. Outside of the use in presets scripts can be run in an expanded mode via the "JS Console", this is currently of limited usefulness as there is no easy way to store and retrieve scripts, however it is intended to add that (and documentation) for release.</p><h2>Miscellaneous</h2>
 <ul>
   <li>the "Find" search function now supports Photon based geocoders. The default configuration of the OSMF Nominatim and komoots Photon instances can be changed in the advanced preferences.</li>
   <li>presets support a "deprecated" property that allows them to be matched for the map display and in the form-based tag editor, but they are not offered and found for new use.</li>
