@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string translatable="false" name="app_name">Vespucci</string>
-    <string translatable="false" name="app_version">0.9.9.0.1257</string>
-    <string translatable="false" name="app_name_version">Vespucci 0.9.9b1257</string>
+    <string translatable="false" name="app_version">0.9.9.0.1258</string>
+    <string translatable="false" name="app_name_version">Vespucci 0.9.9b1258</string>
 </resources>
